# geev

./: .gitignore  AGENTS.md  BADGE_SYSTEM_REPORT.md  CONTRIBUTING.md  ISSUE_350_ANALYSIS.md  README.md  SECURITY.md  SPECIFICATIONS.md  envExample  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tsconfig.json  turbo.json
app/: .npmrc  (+15 more)
contracts/geev-core/: Cargo.toml  PAUSE_IMPLEMENTATION_STATUS.md  SDK_V25_ISSUE.md
contracts/geev-core/src/: access.rs  admin.rs  giveaway.rs  governance.rs  init.rs  lib.rs  mutual_aid.rs  profile.rs  storage.rs  test.rs  types.rs  utils.rs
contracts/geev-core/test_snapshots/test/: test_add_token_to_whitelist.1.json  test_admin_withdraw_fails_non_admin.1.json  test_admin_withdraw_fails_when_no_admin.1.json  test_admin_withdraw_full_balance.1.json  test_admin_withdraw_success.1.json  test_allowlist_rejects_unverified_participant.1.json  test_check_admin_helper.1.json  test_content_auto_suspended_event_emitted.1.json  test_create_giveaway_with_whitelisted_token.1.json  test_distribute_prize.1.json  test_distribute_prize_reentrancy_protection.1.json  test_distribute_prize_wrong_status_fails.1.json  test_donate_event_emits_exact_amount_and_total.1.json  test_donate_to_suspended_request_fails.1.json  test_donation_emits_contributor_tracking_event.1.json  test_donation_flow.1.json  test_donation_reaches_goal.1.json  test_donation_to_fully_funded_request_fails.1.json  test_donation_with_invalid_amount_fails.1.json  test_double_entry_fails.1.json  (+25 more)
contracts/geev-core/tests/: enter_giveaway.rs  pause_unpause.rs
(+299 files in other folders)
